Fixed bug where searchbar would pixel size would not align correctly depending on monitor resolution by switching to border-box

--- a/client/src/SCSS/home/projects-bugs-shared/item/itemContainerTopBar.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/item/itemContainerTopBar.scss
@@ -14,10 +14,11 @@
 	width: 100%;
 	font-family: Arial, Helvetica, sans-serif;
 
-	.outer-search-container {
+	.outer-search-container,
+	.js-calc-outer-search-container {
 		@include vertical-center();
 
-		margin-left: $item-search-bar-margin-left;
+		left: $item-search-bar-left;
 		// This border color should only appear if there was a problem
 		// ...assigning a different background color to this element.
 		// ...the scss for the colors assigned are in home.scss
@@ -34,6 +35,10 @@
 	}
 
 	.outer-search-container__search-bar {
+		// Must be border-box because the zoom on the webpage can resize the border otherwise
+		-webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		box-sizing: border-box;
 		display: inline-block;
 		outline: none;
 		// This border color should only appear if there was a problem
@@ -42,8 +47,7 @@
 		border: $list-search-bar-border-width solid black;
 		padding: 0px $list-search-bar-padding 0px $list-search-bar-padding;
 		height: $list-search-bar-height;
-		width: $item-search-bar-width - ($list-search-bar-border-width * 2) -
-			($list-search-bar-padding * 2) - $list-item-search-bar-button-width;
+		width: $item-search-bar-width - $list-item-search-bar-button-width;
 		font-size: 14px;
 	}
 
@@ -55,7 +59,7 @@
 		// ...assigning a different background color to this element.
 		// ...the scss for the colors assigned are in home.scss
 		background-color: black;
-		height: $list-item-search-bar-button-height;
+		height: $list-search-bar-height;
 		width: $list-item-search-bar-button-width;
 		cursor: pointer;
 	}
@@ -65,13 +69,15 @@
 		color: white;
 	}
 
-	.filter-container {
+	.filter-container,
+	.js-calc-filter-container {
 		position: absolute;
-		left: $item-search-bar-width;
+		left: $item-search-bar-width + ($item-search-bar-left * 2);
 		/* width: 109px; */
 	}
 
-	.filter-container__button {
+	.filter-container__button,
+	.js-calc-filter-container__button {
 		@include stop-text-selection();
 
 		// Must be more than filter-container__content-dropdown
@@ -79,7 +85,6 @@
 		z-index: 1;
 		position: absolute;
 		top: 12px;
-		left: 30px;
 		border: 1px solid black;
 		background-color: white;
 		height: $search-filter-sort-bar-button-height;
@@ -91,7 +96,7 @@
 
 	.filter-container__button--clicked {
 		// Negative margin because border resize moves the element
-		margin: -2px -2px 0px;
+		margin: -2px 0px;
 		border: 3px solid black;
 		border-bottom: none;
 		height: 48px;
@@ -111,10 +116,7 @@
 
 	.filter-container__content-dropdown {
 		position: absolute;
-		/* top: 41px; */
 		top: 58px;
-		// 2px less than button since border resize moves the button
-		left: 28px;
 		border: 3px solid black;
 		background-color: white;
 		height: 200px;
