--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -54,7 +54,7 @@ $navbar-height: 60px;
 $edit-account-modal-height: 480px;
 $search-filter-sort-bar-height: 52px;
 $search-filter-sort-bar-button-height: 28px;
-$list-search-bar-height: 28px;
+$list-search-bar-height: 32px;
 $list-item-table-row-height: 50px;
 $status-box-height: 27px;
 $create-item-sidebar-height: 700px;
@@ -72,20 +72,25 @@ $list-table-min-width: 1100px;
 $list-table-item-name-width: 250px;
 $status-box-width: 110px;
 $create-item-sidebar-width: 500px;
+$item-search-bar-width: 290px;
+$options-button-width: 36px;
 $item-container-list-sidebar-width: 275px;
 $expand-minimize-button-width: 25px;
-$options-button-width: 36px;
 $item-container-outer-dividing-container-min-width: 560px;
 $edit-item-name-input-width: 600px;
 $edit-item-name-char-counter-container-width: 50px;
 $item-container-project-bugs-item-box-stats-container-width: 200px;
+
+//==========
+// Position
+//==========
+$item-search-bar-left: 15px;
 
 //=========
 // Margins
 //=========
 $form-input-margin-bottom: 10px;
 $display-item-field-margin-left: 11px;
-$item-search-bar-margin-left: 10px;
 
 //==========
 // Borders
@@ -122,12 +127,6 @@ $blurred-background-opacity: 0.5;
 //============
 // Arithmetic
 //============
-$list-item-search-bar-button-height: $list-search-bar-height +
-	$list-search-bar-border-width * 2;
-$list-item-search-bar-button-width: $list-search-bar-height +
-	$list-search-bar-border-width * 2 + 10;
-$item-search-bar-width: $item-container-list-sidebar-width + ($item-container-list-sidebar-border-width * 2) +
-	$expand-minimize-button-width - $item-search-bar-margin-left -
-	($list-item-search-bar-group-container-border-width * 2);
+$list-item-search-bar-button-width: $list-search-bar-height + 10;
 $edit-item-name-name-centering-container-height: $edit-item-name-input-height +
 	($edit-item-name-input-border-width * 2) + ($edit-item-name-input-padding * 2);
